10-ingress/nginx-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-v2
  namespace: kila
  labels:
    service: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    service: nginx
    version: v2
